[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/globals/ScriptPanel.gd" type="Script" id=2]
[ext_resource path="res://src/globals/DebugDisplay.gd" type="Script" id=4]

[node name="DebugDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Registers" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_right = -4.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Registers"]
margin_right = 100.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 0 )

[node name="A" type="HBoxContainer" parent="Registers/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Registers/VBoxContainer/A"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 0 )
text = "A"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/A"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "0x0"
readonly = true

[node name="X" type="HBoxContainer" parent="Registers/VBoxContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Registers/VBoxContainer/X"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 0 )
text = "X"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/X"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "0x0"
readonly = true

[node name="Y" type="HBoxContainer" parent="Registers/VBoxContainer"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="Registers/VBoxContainer/Y"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 0 )
text = "Y"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/Y"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "0x0"
readonly = true

[node name="PC" type="HBoxContainer" parent="Registers/VBoxContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="Registers/VBoxContainer/PC"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 0 )
text = "PC"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/PC"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "0x0"
readonly = true

[node name="S" type="HBoxContainer" parent="Registers/VBoxContainer"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="Registers/VBoxContainer/S"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 0 )
text = "S"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/S"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "0x0"
readonly = true

[node name="P" type="HBoxContainer" parent="Registers/VBoxContainer"]
margin_top = 120.0
margin_right = 100.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="Registers/VBoxContainer/P"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 0 )
text = "P"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/P"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "0x0"
readonly = true

[node name="Memory" type="TextEdit" parent="."]
margin_right = 492.0
margin_bottom = 448.0
text = "00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
..."

[node name="ScriptPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -384.0
margin_top = 142.0
margin_bottom = 264.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScriptPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScriptPanel/VBoxContainer"]
margin_right = 384.0
margin_bottom = 30.0

[node name="LoadButton" type="Button" parent="ScriptPanel/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 30.0
text = "Load Script"

[node name="ScriptPath" type="TextEdit" parent="ScriptPanel/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 381.0
margin_bottom = 30.0
rect_min_size = Vector2( 295, 30 )
text = "res://fake_file.tscn"

[node name="RunScriptButton" type="Button" parent="ScriptPanel/VBoxContainer"]
margin_top = 34.0
margin_right = 384.0
margin_bottom = 54.0
text = "Run Script"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -170.5
margin_right = 320.0
margin_bottom = 170.5
window_title = "Open a File"
mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ScriptPanel/VBoxContainer/HBoxContainer/LoadButton" to="ScriptPanel" method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ScriptPanel/VBoxContainer/RunScriptButton" to="ScriptPanel" method="_on_RunScriptButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="ScriptPanel" method="_on_FileDialog_file_selected"]
